[package]
name = "xp-sqlite"
version = "0.1.0"
edition = "2021"
rust-version = "1.78"

[lints.rust]
unsafe_code = "forbid"
# unused = { level = "allow", priority = -1 } # For exploratory dev.

[dependencies]
# -- Async
tokio = { version = "1", features = ["full"] }
# -- Json
serde = { version = "1", features = ["derive"] }
serde_json = "1"
# -- DB
rusqlite = { version = "0.33.0", features = ["bundled",  ] } # "serde_json"
tabled = "0.17"


