[package]
name = "xp-sqlite"
version = "0.1.0"
edition = "2024"
rust-version = "1.88"

[lints.rust]
unsafe_code = "forbid"
# unused = { level = "allow", priority = -1 } # For exploratory dev.

[dependencies]
# -- Async
tokio = { version = "1", features = ["full"] }
# -- Json
serde = { version = "1", features = ["derive"] }
serde_json = "1"
# -- DB
rusqlite = { version = "0.37", features = ["bundled", "serde_json"] }

[dev-dependencies]
pretty-sqlite = { version = "0.3.0"}